# roto-demo

./: Cargo.toml  shell.nix
scripts/: scatter.roto  snow.roto  spiral.roto  tornado.roto
src/: instancing.rs  main.rs  script_manager.rs
