[package]
name = "roto-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.1", features = ["bevy_dev_tools"] }
bytemuck = "1.23.2"
rand = "0.9.2"
roto = { git = "https://github.com/NLnetLabs/roto", version = "0.7.0" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
